--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
       <div id="twobox">
         <h1 class="display-4" style="font-weight: bolder;">MIN 40% + EXTRA 30% OFF ON SOME ITEMS</h1>
         <p class="text-secondary">Discount auto-applied at checkout</p>
-        <button class="col m-2 karinabtn" id="btn">SHOP&nbsp;NOW</button>
+        <button class="col m-2 karinabtn" style="background-color: white;" id="btn">SHOP&nbsp;NOW</button>
       </div>
     </div><br>
 
